ingress-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    route.openshift.io/termination: reencrypt
  name: platform
  namespace: arcade
spec:
  rules:
    - host: arcade.apps-crc.testing
      http:
        paths:
          - backend:
              service:
                name: platform
                port:
                  number: 4443
            pathType: Prefix
            path: /
          - backend:
              service:
                name: game
                port:
                  number: 8080
            path: /s3e
            pathType: Prefix
          - backend:
              service:
                name: highscore
                port:
                  number: 8080
            path: /highscore
            pathType: Prefix
tls:
  - hosts:
      - arcade.apps-crc.testing
    secretName: platform-secret-tls
