route-sa.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: proxy
  namespace: s3e
spec:
  to:
    kind: Service
    name: proxy
  tls:
    termination: Reencrypt
